k8/cycling_chat/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cyclingchat-deployment
spec:
  selector:
    matchLabels:
      app: cyclingchat
  replicas: 2
  template:
    metadata:
      labels:
        app: cyclingchat
    spec:
      containers:
        - image: "brunocoelho1997/cyclingchat-image:1.0"
          imagePullPolicy: IfNotPresent
          name: cyclingchat-pod
          ports:
            - containerPort: 8080
              protocol: TCP
