k8/cycling_chat/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cyclingchat-service
spec:
  type: NodePort
  selector:
    app: cyclingchat
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
